syntax = "proto3";

package chainlink;

service ChainlinkService {
  rpc GetPriceFeed (PriceFeedRequest) returns (PriceFeedResponse);
}

message PriceFeedRequest {
  string chain = 1;
  string pair = 2;
}

message PriceFeedResponse {
  double price = 1;
}
